2011-12-07  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (libm_common_src_files): Add sincos.c.
	(DYNAMIC_LIBSTDCXX): Add $(LIBGCC) after $(LIBSUPCXX).
	(STATIC_LIBSTDCXX): Likewise.

2011-06-13  H.J. Lu  <hongjiu.lu@intel.com>

	* test/hello.c (hello): New.
	(main): Use it.

2011-04-26  H.J. Lu  <hongjiu.lu@intel.com>

	* README: Updated.

2011-04-26  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (ARCH): Default to x86.

2011-04-26  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (BIONIC_LIBSTDCXX_DIR): New.
	(LIBSUPCXX): Likewise.
	(build-dynamic-c++-executable): Likewise.
	(build-static-c++-executable): Likewise.
	(build-shlib-ldflags): Likewise.
	(build-shlib): Add $($(@F)_LIBS).
	($(LIB_DIR)/libdl.so): Use $(build-shlib-ldflags).
	Build libstdc++.a, libstdc++.so, test_basic_exceptions.static
	and test_basic_exceptions.dynamic.
	Support .cpp and .cc C++ files.

	* test/test_basic_exceptions.cpp: New.

2011-04-26  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (build-shlib): Put $(LIB_DIR)/crtend_so.o at the end.

2011-04-25  H.J. Lu  <hongjiu.lu@intel.com>

	* .gdbinit: New.

2011-04-23  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (CORE_LIBCUTILS_DIR): Removed.
	(VPATH): Remove $(CORE_LIBCUTILS_DIR).

2011-04-23  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (INCLUDES): Add -I$(BIONIC_LIBC_DIR)/private.
	(CPP_FLAGS): -DANDROID_SMP=1.
	($(crt_OBJS):CFLAGS): Remove -DNO_CTORS_SECTIONS.
	(LINKER_CFLAGS): Likewise.
	(libdl.so_LDFLAGS): New.
	(libc_static_common_src_files): New.
	(libc_common_src_files): Updated for UMG AOSP 20110422.
	(libc_common_cflags): Remove -DNEED_PSELECT=1 and
	-DNO_CTORS_SECTIONS.
	(libc_nomalloc_src_files): Add $(libc_static_common_src_files).
	(libc.so_src_files): Likewise.
	(LINKER_SRC_FILES): Add linker_environ.c.  Remove
	socket_local_client.c.
	($(LIB_DIR)/libdl.so): New.

2011-04-22  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (CPP_FLAGS): Add -DSHARED.

2011-01-17  H.J. Lu  <hongjiu.lu@intel.com>
