@@ -1,0 +1,6 @@
+extern int foo(void);
+int main(int argc, char** argv)
+{
+    (void) foo();
+    return 0;
+}
